feat: Add ngrok integration and optimize build process
- Added ngrok configuration for public access
- Enhanced dev:unified workflow
- Improved server setup and routing
- Updated frontend for better deployment

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev:server": "cross-env NODE_ENV=development nodemon src/server/app.js",
     "dev:dashboard": "vite --config vite.config.js --port 5173",
     "dev:gameroom": "vite --config vite.config.js --port 5174",
+    "dev:unified": "npm run build && cross-env NODE_ENV=development nodemon src/server/app.js",
     "start": "cross-env NODE_ENV=production node src/server/app.js",
+    "start:unified": "npm run build && npm run start",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage",
